--- a/weRsvp/package.json
+++ b/weRsvp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "test",
     "script": "npx hardhat compile && npx hardhat run scripts/run.ts",
-    "deploy": "npx hardhat compile && npx hardhat run scripts/deploy.js --network mumbai"
+    "deploy": "npx hardhat compile && npx hardhat run scripts/deploy.ts --network mumbai"
   },
   "keywords": [
     "events",
